2016-07-26  Carl Hetherington  <cth@carlh.net>

	* Expand vertical size of servers list in preferences (#913).

2016-07-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.5 released.

2016-07-20  Carl Hetherington  <cth@carlh.net>

	* Add -t option to dcpomatic2_cli to override the configured
	local thread count.

	* Version 2.9.4 released.

2016-07-20  Carl Hetherington  <cth@carlh.net>

	* Try to fix -r option to dcpomatic_cli.

	* Try to fix intermittent hangs with encoding servers.

2016-07-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.3 released.

2016-07-14  Carl Hetherington  <cth@carlh.net>

	* Use default configuration if the config.xml failed to load;
	may help with #917.

2016-07-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.2 released.

2016-07-12  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from Rov (若文).

2016-07-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.1 released.

2016-07-08  Carl Hetherington  <cth@carlh.net>

	* Show hints before making DCP / sending to batch
	converter (#823).

	* Allow import of some more types of DNxHR file.

	* Support shadow in subtitles (#911).

	* Version 2.9.0 released.

2016-07-07  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.8.20 released.

2016-07-07  c.hetherington  <cth@carlh.net>

	* Fix incorrect job running time reports (#912).

2016-07-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.19 released.

2016-07-05  c.hetherington  <cth@carlh.net>

	* Fix stay-on-top behaviour of audio/video graphs
	to only stay on top of other DCP-o-matic windows (#909).

2016-07-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.18 released.

2016-07-04  c.hetherington  <cth@carlh.net>

	* Fix several bugs with the sensitivity
	of controls in various circumstances.

2016-07-04  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-07-03  Carl Hetherington  <cth@carlh.net>
